SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/SaaSOptics_Invoice__c.object-meta.xml
<CustomObject>
    <description>Custom object to contain invoices from SaaSOptics.</description>
    <label>SaaSOptics Invoice</label>
    <nameField>
        <label>SaaSOptics Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SaaSOptics Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>