SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Contract_Number__c</fullName>
    <description>Number of the contract in SaaSOptics.</description>
    <label>Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>