SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Contract_SaaSOptics_URL__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Contract_SaaSOptics_URL__c</fullName>
    <description>Link directly to the contract in SaaSOptics.</description>
    <label>SaaSOptics Contract URL</label>
    <type>Url</type>
</CustomField>