SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Contract_Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Contract_Salesforce_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SaaSOptics Contract</label>
    <referenceTo>SaaSOptics_Contract__c</referenceTo>
    <relationshipLabel>SaaSOptics Invoices</relationshipLabel>
    <relationshipName>SaaSOptics_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>