SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Customer_Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Customer_Salesforce_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>18 digit Salesforce ID of the Account stored in the SaaSOptics Customer</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SaaSOptics Invoices</relationshipLabel>
    <relationshipName>SaaSOptics_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>