SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Customer_Salesforce_Owner__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Customer_Salesforce_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>18 digit Salesforce ID of the Owner of the Customer in SaaSOptics</description>
    <inlineHelpText>18 digit Salesforce ID of the Owner of the Customer in SaaSOptics</inlineHelpText>
    <label>SaaSOptics Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SaaSOptics_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>