SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Customer_Salesforce_Price_BK__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Customer_Salesforce_Price_BK__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>15 Digit SFDC ID of the Price Book associated with the Customer in SaaSOptics</description>
    <label>Customer Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>SaaSOptics Invoices</relationshipLabel>
    <relationshipName>SaaSOptics_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>