SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Amount__c</fullName>
    <label>Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>