SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_AR_Aging__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_AR_Aging__c</fullName>
    <formula>if( AND(SaaSOptics_Invoice_Balance__c &gt;0, SaaSOptics_Invoice_Due_Date__c &lt;TODAY()),TODAY()- SaaSOptics_Invoice_Due_Date__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AR Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>