SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Balance__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Balance__c</fullName>
    <description>Unpaid portion of the invoice in SaaSOptics. If multi-currency is enabled in SaaSOptics the amount will be reflected in the local currency of the invoice.</description>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>