SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Billing_City__c</fullName>
    <description>Invoice Billing City</description>
    <label>Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>