SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Billing_Country__c</fullName>
    <description>SaaSOptics Invoice Billing Country</description>
    <label>Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>