SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Billing_State_Prov__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Billing_State_Prov__c</fullName>
    <description>Invoice Billing State/Province</description>
    <label>Billing State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>