SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Billing_Street__c</fullName>
    <description>Invoice billing street address.</description>
    <label>Billing Street</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>