SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Billing_Zip_Postal__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Billing_Zip_Postal__c</fullName>
    <description>SaaSOptics Invoice Billing Zip Code</description>
    <label>Billing Zip/Postal Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>