SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Date__c</fullName>
    <description>Date of the invoice in SaaSOptics</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>