SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_e_Invoice_URL__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_e_Invoice_URL__c</fullName>
    <inlineHelpText>This URL includes the click tracking and if clicked will reflect the e-invoice as viewed. Should only be used to send to a customer.</inlineHelpText>
    <label>e-Invoice URL (Click Tracking)</label>
    <type>Url</type>
</CustomField>