SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_e_Invoice_URL_NoTrack__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_e_Invoice_URL_NoTrack__c</fullName>
    <label>e-Invoice URL</label>
    <type>Url</type>
</CustomField>