SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Indicator__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Indicator__c</fullName>
    <formula>if(SaaSOptics_Invoice_AR_Aging__c &lt;30,image(&quot;/servlet/servlet.FileDownload?file=015f4000000hZTl&quot;,&quot;Green&quot;), 

if( SaaSOptics_Invoice_AR_Aging__c &gt; 119,image(&quot;/servlet/servlet.FileDownload?file=015f40000000fYq&quot;,&quot;Flame&quot;), 
if( SaaSOptics_Invoice_AR_Aging__c &gt; 59,image(&quot;/servlet/servlet.FileDownload?file=015f40000000fYl&quot;,&quot;Red&quot;), 
image(&quot;/servlet/servlet.FileDownload?file=015f40000000fYg&quot;,&quot;Yellow&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicator</label>
    <type>Text</type>
</CustomField>