SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Memo__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Memo__c</fullName>
    <description>SaaSOptics Invoice Memo</description>
    <label>Memo</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>