SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Other__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Other__c</fullName>
    <description>SaaSOptics Invoice Other Field</description>
    <label>Other</label>
    <length>29</length>
    <type>Text</type>
</CustomField>