SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_PO_Number__c</fullName>
    <description>PO Number from Invoice in SaaSOptics</description>
    <label>PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>