SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_QuickBooks_Class__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_QuickBooks_Class__c</fullName>
    <description>QuickBooks Class</description>
    <label>QuickBooks Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>