SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Quickbooks_Number__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Quickbooks_Number__c</fullName>
    <description>Quickbooks Invoice Number</description>
    <label>Quickbooks Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>