SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Quickbooks_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Quickbooks_Sales_Rep__c</fullName>
    <description>Sales Rep sync&apos;d from Quickbooks to SaaSOptics</description>
    <label>Quickbooks Sales Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>