SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Recurly_Id__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Recurly_Id__c</fullName>
    <description>Recurly ID of the invoice in SaaSOptics</description>
    <label>Recurly Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>