SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_SaaSOptics_ID__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_SaaSOptics_ID__c</fullName>
    <externalId>true</externalId>
    <label>SaaSOptics Invoice ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>