SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_SaaSOptics_URL__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_SaaSOptics_URL__c</fullName>
    <description>The unique URL of the view Invoice screen in SaaSOptics</description>
    <label>SaaSOptics Invoice URL</label>
    <type>Url</type>
</CustomField>