SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Sales_Tax__c</fullName>
    <description>SaaSOptics Invoice Tax Amount</description>
    <label>Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>