SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Sales_Tax_Percentage__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Sales_Tax_Percentage__c</fullName>
    <description>SaaSOptics Invoice Tax Percentage</description>
    <label>Sales Tax Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>