SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Ship_Date__c</fullName>
    <description>Ship date of the invoice in SaaSOptics.</description>
    <label>Ship Date</label>
    <type>Date</type>
</CustomField>