SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Shipping_City__c</fullName>
    <description>SaaSOptics invoice shipping city</description>
    <label>Shipping City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>