SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Shipping_Country__c</fullName>
    <description>SaaSOptics invoice shipping country.</description>
    <label>Shipping Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>