SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Shipping_State_Prov__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Shipping_State_Prov__c</fullName>
    <description>SaaSOptics invoice shipping state/province.</description>
    <label>Shipping State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>