SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Shipping_Street__c</fullName>
    <description>SaaSOptics invoice shipping street address</description>
    <label>Shipping Street</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>