SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Shipping_Zip_Postal__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Shipping_Zip_Postal__c</fullName>
    <description>SaaSOptics invoice shipping Zip/Postal code.</description>
    <label>Shipping Zip/Postal Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>