SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>