SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Stripe_Id__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Stripe_Id__c</fullName>
    <description>Stripe ID of the Invoice contained in SaaSOptics</description>
    <label>Stripe Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>