SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Subtotal__c</fullName>
    <description>Subtotal of the invoice from SaaSOptics. If Multicurrency is enabled in SaaSOptics the amount will be reflected in the local currency.</description>
    <label>Invoice Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>