SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Invoice_Type__c</fullName>
    <description>Invoice Classification in SaaSOptics</description>
    <label>Invoice Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>