SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_IsPast_Due__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_IsPast_Due__c</fullName>
    <formula>if( SaaSOptics_Invoice_Due_Date__c &lt;TODAY(),if(   SaaSOptics_Invoice_Balance__c =0,FALSE,TRUE),FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Past Due</label>
    <type>Checkbox</type>
</CustomField>