SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Open_Balance__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Open_Balance__c</fullName>
    <formula>if( SaaSOptics_Invoice_Date__c &lt;(TODAY()+1), SaaSOptics_Invoice_Balance__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>