SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Past_Due_Balance__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Past_Due_Balance__c</fullName>
    <formula>if( SaaSOptics_Invoice_AR_Aging__c &gt;0, SaaSOptics_Invoice_Balance__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Due Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>