SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/fields/SaaSOptics_Register_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Register_Currency_Code__c</fullName>
    <description>The Currency Code of the Register that holds the Invoice. Required if and use only if multi-currency is enabled in Salesforce.</description>
    <label>Register: Currency Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>