SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/listViews/Invoice_Status_Open_Balance.listView-meta.xml
<ListView>
    <fullName>Invoice_Status_Open_Balance</fullName>
    <columns>NAME</columns>
    <columns>SaaSOptics_Customer_Salesforce_ID__c</columns>
    <columns>SaaSOptics_Invoice_Amount__c</columns>
    <columns>SaaSOptics_Invoice_Balance__c</columns>
    <columns>SaaSOptics_Invoice_Date__c</columns>
    <columns>SaaSOptics_Invoice_Due_Date__c</columns>
    <columns>SaaSOptics_Invoice_Status__c</columns>
    <columns>SaaSOptics_Invoice_AR_Aging__c</columns>
    <columns>SaaSOptics_Invoice_Indicator__c</columns>
    <columns>SaaSOptics_Invoice_e_Invoice_URL_NoTrack__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SaaSOptics_Invoice_Balance__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>SaaSOptics_Invoice_Balance__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>SaaSOptics_Invoice_AR_Aging__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>Invoice Status - Open Balance</label>
</ListView>