SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Invoice__c/listViews/View_All.listView-meta.xml
<ListView>
    <fullName>View_All</fullName>
    <columns>NAME</columns>
    <columns>SaaSOptics_Customer_Salesforce_ID__c</columns>
    <columns>SaaSOptics_Invoice_Date__c</columns>
    <columns>SaaSOptics_Invoice_Amount__c</columns>
    <columns>SaaSOptics_Invoice_Due_Date__c</columns>
    <columns>SaaSOptics_Invoice_Balance__c</columns>
    <columns>SaaSOptics_Invoice_Status__c</columns>
    <columns>SaaSOptics_Invoice_AR_Aging__c</columns>
    <columns>SaaSOptics_Invoice_Indicator__c</columns>
    <columns>SaaSOptics_Invoice_SaaSOptics_URL__c</columns>
    <columns>SaaSOptics_Invoice_e_Invoice_URL_NoTrack__c</columns>
    <filterScope>Everything</filterScope>
    <label>View All</label>
</ListView>